--- a/apps/calendar/package.json
+++ b/apps/calendar/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@toast-ui/calendar",
   "author": "NHN Cloud FE Development Lab <dl_javascript@nhn.com>",
+  "description": "Forked TOAST UI Calendar",
   "version": "2.1.3",
   "main": "./dist/toastui-calendar.js",
   "types": "./types/index.d.ts",
@@ -27,26 +28,10 @@
     }
   },
   "license": "MIT",
-  "description": "TOAST UI Calendar",
   "repository": {
     "type": "git",
     "url": "https://github.com/nhn/tui.calendar.git"
   },
-  "keywords": [
-    "nhn",
-    "toast",
-    "toastui",
-    "toast-ui",
-    "calendar",
-    "fullcalendar",
-    "daily",
-    "weekly",
-    "monthly",
-    "business week",
-    "milestone",
-    "task",
-    "allday"
-  ],
   "files": [
     "dist",
     "types/index.d.ts",
