--- a/apps/react-calendar/package.json
+++ b/apps/react-calendar/package.json
@@ -2,7 +2,7 @@
   "name": "@toast-ui/react-calendar",
   "version": "2.1.3",
   "license": "MIT",
-  "description": "TOAST UI Calendar for React",
+  "description": "Forked TOAST UI Calendar for React",
   "author": "NHN Cloud FE Development Lab <dl_javascript@nhn.com>",
   "homepage": "https://github.com/nhn/tui.calendar",
   "bugs": "https://github.com/nhn/tui.calendar/issues",
@@ -33,21 +33,6 @@
       ]
     }
   },
-  "keywords": [
-    "nhn",
-    "toast",
-    "toastui",
-    "toast-ui",
-    "calendar",
-    "fullcalendar",
-    "daily",
-    "weekly",
-    "monthly",
-    "business week",
-    "milestone",
-    "task",
-    "allday"
-  ],
   "scripts": {
     "develop": "vite",
     "build": "rimraf dist/ && concurrently 'npm:build:*'",
@@ -57,7 +42,7 @@
     "build:types": "rimraf types/ && tsc -p ./tsconfig.declaration.json"
   },
   "dependencies": {
-    "@toast-ui/calendar": "^2.1.3"
+    "@toast-ui/calendar": "github::QuesDevTeam/tui-calendar.git"
   },
   "devDependencies": {
     "@types/react": "^17.0.2",
